--- a/app/src/index.css
+++ b/app/src/index.css
@@ -9,6 +9,12 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+#root {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
 .container {
 	width: 1200px;
 	margin: 0 auto;
